[package]
name = "homeworlds_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumset = "1.0.12"
derive-new = "0.5.9"
strum = "0.24.1"
strum_macros = "0.24.1"
itertools = "0.10.5"
array-init = "2.0.1"